# rust-msp432p401r

./: Cargo.toml
.cargo/: config
src/: main.rs
