[package]
name = "rust-msp"
version = "0.1.0"
authors = ["Kaelan Mikowicz <eternity01033@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.6.12"
cortex-m = "0.6.2"
cortex-m-rt-ld = "0.1.1"
panic-semihosting = "0.5.3"
cortex-m-semihosting = "0.3.5"

[dependencies.msp432p401r]
path = "msp432p401r"
features = ["rt"]
